Fixed popover arrow in Wordpress, Dashnex modal backdrop z-index

--- a/less/modals.less
+++ b/less/modals.less
@@ -68,6 +68,7 @@
   bottom: 0;
   left: 0;
   background-color: @modal-backdrop-bg;
+  z-index: auto;
   // Fade for backdrop
   &.fade { .opacity(0); }
   &.in { .opacity(@modal-backdrop-opacity); }
