--- a/less/popovers.less
+++ b/less/popovers.less
@@ -59,6 +59,15 @@
     height: 0;
     border-color: transparent;
     border-style: solid;
+    overflow: visible;
+    margin-left: 0;
+    transform: none;
+    background: transparent;
+    box-shadow: none;
+  }
+
+  &:after {
+    top: auto;
   }
 }
 &.popover > .arrow {
